--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
+sudo: required
 language: python
 python:
   - "3.8"
 addons:
   chrome: stable
+before_install:
+  - wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/$CHROMEDRIVER/chromedriver_linux64.zip
+  - mkdir $HOME/chromedriver && unzip /tmp/chromedriver.zip -d $HOME/chromedriver
+  - export PATH=$HOME/chromedriver:$PATH
 install:
   - pip install -r requirements.txt
 script:
