--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 addons:
   chrome: stable
 before_install:
-  - wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/$CHROMEDRIVER/chromedriver_linux64.zip
+  - wget -O /tmp/chromedriver.zip https://chromedriver.storage.googleapis.com/90.0.4430.24/chromedriver_linux64.zip
   - mkdir $HOME/chromedriver && unzip /tmp/chromedriver.zip -d $HOME/chromedriver
   - export PATH=$HOME/chromedriver:$PATH
 install:
