перенес группы в базовые данные

--- a/initial_data.yaml
+++ b/initial_data.yaml
@@ -1,3 +1,13 @@
+- model: auth.group
+  pk: 1
+  fields:
+    name: 'Преподаватель'
+
+- model: auth.group
+  pk: 2
+  fields:
+    name: 'Студент'
+
 - model: app.StudentStatus
   pk: 1
   fields:
